# starfin

./: .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  README.md  build.sh  flake.nix
crates/dashjs-rs/: Cargo.toml  README.md
crates/dashjs-rs/src/: lib.rs
crates/dashjs-rs/src/core/: errors.rs  event_bus.rs  events.rs  logger.rs  mod.rs  settings.rs  utils.rs
crates/dashjs-rs/src/dash/: dash_adapter.rs  dash_handler.rs  dash_metrics.rs  mod.rs
crates/dashjs-rs/src/dash/constants/: mod.rs
crates/dashjs-rs/src/dash/controllers/: mod.rs  representation_controller.rs  segment_base_controller.rs  segments_controller.rs
crates/dashjs-rs/src/dash/models/: dash_manifest_model.rs  mod.rs
crates/dashjs-rs/src/dash/parser/: mod.rs
crates/dashjs-rs/src/dash/parser/matchers/: mod.rs
crates/dashjs-rs/src/dash/utils/: list_segments_getter.rs  mod.rs  segment_base_getter.rs  segments_utils.rs  template_segments_getter.rs  timeline_converter.rs  timeline_segments_getter.rs
crates/dashjs-rs/src/dash/vo/: adaptation_set.rs  base_url.rs  content_protection.rs  content_steering.rs  descriptor_type.rs  event_stream.rs  manifest_info.rs  media_info.rs  mod.rs  mpd.rs  mpd_location.rs  patch_location.rs  period.rs  representation.rs  segment.rs  stream_info.rs  utc_timing.rs
crates/dashjs-rs/src/mss/: mod.rs
crates/dashjs-rs/src/offline/: mod.rs
crates/dashjs-rs/src/streaming/: manifest_updater.rs  media_player.rs  media_player_events.rs  mod.rs  pre_buffer_sink.rs  xlink_loader.rs
crates/dashjs-rs/src/streaming/constants/: mod.rs
crates/dashjs-rs/src/streaming/controllers/: abr_controller.rs  base_url_controller.rs  blacklist_controller.rs  buffer_controller.rs  catchup_controller.rs  client_data_reporting_controller.rs  common_access_token_controller.rs  event_controller.rs  ext_url_query_info_controller.rs  fragment_controller.rs  gap_controller.rs  media_controller.rs  media_source_controller.rs  mod.rs  playback_controller.rs  schedule_controller.rs  stream_controller.rs  throughput_controller.rs  time_sync_controller.rs  xlink_controller.rs
crates/dashjs-rs/src/streaming/metrics/: mod.rs
crates/dashjs-rs/src/streaming/models/: fragment_model.rs  media_player_model.rs  metrics_model.rs  mod.rs  throughput_model.rs
crates/dashjs-rs/src/streaming/net/: mod.rs
crates/dashjs-rs/src/streaming/protection/: mod.rs
crates/dashjs-rs/src/streaming/rules/: dropped_frames_history.rs  mod.rs  rules_context.rs  switch_request.rs  switch_request_history.rs
crates/dashjs-rs/src/streaming/rules/abr/: abandon_requests_rule.rs  abr_rules_collection.rs  bola_rule.rs  dropped_frames_rule.rs  insufficient_buffer_rule.rs  l2a_rule.rs  mod.rs  switch_history_rule.rs  throughput_rule.rs
crates/dashjs-rs/src/streaming/rules/abr/lolp/: learning_abr_controller.rs  lolp_qoe_evaluator.rs  lolp_rule.rs  lolp_weight_selector.rs  mod.rs
crates/dashjs-rs/src/streaming/text/: mod.rs
crates/dashjs-rs/src/streaming/thumbnail/: mod.rs
crates/dashjs-rs/src/streaming/utils/: mod.rs
crates/dashjs-rs/src/streaming/vo/: mod.rs
dash.js/: AGENTS.md  index.d.ts  package-lock.json  package.json
dash.js/.github/workflows/: deploy.yml  deploy_build_latest.yml  deploy_build_latest_as_version_folder.yml  deploy_latest.yml  deploy_nightly.yml  deploy_v4_latest.yml  deploy_v4_nightly.yml  verify_branch.yml  verify_pull_request.yml
dash.js/contrib/controlbar/: ControlBar.js  README.md  controlbar.css
dash.js/samples/: samples.json
dash.js/samples/dash-if-reference-player/: index.html
dash.js/samples/dash-if-reference-player-legacy/: index.html
dash.js/samples/drm/: certificate-wrapping.html  fairplay.html
dash.js/samples/multi-audio/: multi-audio-default-lang-acc.html
dash.js/samples/performance-tests/: initcache-test.html
dash.js/src/core/: EventBus.js  Settings.js
dash.js/src/dash/: DashAdapter.js  (+1 more)
docs/: video_player.md
frontend/: Cargo.toml  Trunk.toml  index.html  manifest.json
frontend/js/: dash.all.min.js
frontend/src/: api.rs  app.rs  main.rs  models.rs
frontend/src/components/: cached_badge.rs  filters.rs  grid.rs  media_edit_modal.rs  mod.rs  multi_select.rs  password_modal.rs  processing_status.rs  scroll_view.rs  video_card_thumb.rs  video_player.rs  video_player.rs.old
frontend/src/hls/: abr.rs  buffer.rs  config.rs  controller.rs  error.rs  events.rs  loader.rs  metadata.rs  mod.rs  playlist.rs
frontend/styles/: main.css
nix/: module.nix
src/: main.rs
src/media/: hwaccel.rs  mod.rs  probe.rs  sprite.rs  subtitle.rs  thumbnail.rs  transcode.rs
test_videos/: .gitignore
themes/: example.toml
(+89 files in other folders)
