[package]
name = "starfin"
version = "0.1.0"
edition = "2024"

[dependencies]
libc = "0.2"
actix-cors = "0.7"
actix-session = { version = "0.10", features = ["cookie-session"] }
actix-web = "4"
actix-web-lab = "0.24"
actix-ws = "0.4.0"
ffmpeg-next = "8.0"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
mime_guess = "2.0.5"
reqwest = "0.13.2"
rust-embed = "8.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "fs", "sync", "process"] }
toml = "0.8"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }
walkdir = "2"
argon2 = "0.5"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
