[package]
name = "starfin-frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
log = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3", features = [
    "Window",
    "Location",
    "Storage",
    "Url",
    "UrlSearchParams",
    "Crypto",
    "SubtleCrypto",
    "Document",
    "EventSource",
    "MessageEvent",
    "HtmlVideoElement",
    "HtmlMediaElement",
    "MediaSource",
    "SourceBuffer",
    "SourceBufferAppendMode",
    "SourceBufferList",
    "TimeRanges",
    "MediaStreamConstraints",
    "MediaTrackConstraints",
    "MediaDevices",
    "Navigator",
    "MediaStream",
    "MediaStreamTrack",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "HtmlSelectElement",
    "HtmlElement",
    "Element",
    "DomRect",
    "Blob",
    "BlobPropertyBag",
    "HtmlInputElement",
    "InputEvent",
    "HtmlAnchorElement",
    "Event",
    "MouseEvent",
    "KeyboardEvent",
    "WheelEvent",
    "FocusEvent",
    "HtmlImageElement",
    "ImageData",
    "TextTrack",
    "TextTrackList",
    "TextTrackCue",
    "TextTrackCueList",
    "TextTrackMode",
    "HtmlTrackElement",
    "AddEventListenerOptions",
    "EventListenerOptions",
    "Screen",
    "CssStyleDeclaration",
    "ScrollToOptions",
    "ScrollBehavior",
    "MediaQueryList",
    "Performance",
    "PerformanceEntry",
    "PerformanceTiming",
    "VideoPlaybackQuality",
    "AbortController",
    "AbortSignal",
    "TextDecoder",
] }
base64 = "0.22"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
yew = { version = "0.21.0", features = ["csr"] }
js-sys = "0.3.77"
urlencoding = "2"
gloo-timers = { version = "0.3.0", features = ["futures"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
futures = { version = "0.3.32", default-features = false, features = ["std"] }
wasm-bindgen-console-logger = "0.1.1"
console_error_panic_hook = "0.1.7"
