[package]
name = "dashjs-rs"
version = "0.1.0"
edition = "2021"
description = "A feature-complete Rust port of Dash.js — MPEG-DASH adaptive streaming library"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
quick-xml = { version = "0.31", features = ["serialize"] }
url = "2.5"
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
env_logger = "0.11"
